--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0",
   "private": false,
   "proxy": "http://localhost:8000",
-  "homepage": "https://reduction-admin.github.io/react-reduction",
+  "homepage": "https://fivecube-ems-frontend.herokuapp.com",
   "dependencies": {
     "axios": "^0.21.1",
     "bootstrap": "^4.3.1",
