--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,16 @@
     "chart.js": "2.7.2",
     "classnames": "^2.2.6",
     "d3-geo": "^1.11.3",
+    "datatables.net-buttons": "^2.2.2",
+    "datatables.net-datetime": "^1.1.2",
     "datatables.net-dt": "^1.11.4",
     "faker": "^4.1.0",
     "jquery": "^3.6.0",
+    "jquery-datepicker": "^1.12.3",
+    "jquery-datetimepicker": "^2.5.21",
+    "jquery-ui": "^1.13.1",
     "mdbreact": "^5.2.0",
+    "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-chartjs-2": "^2.7.4",
