--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "homepage": "",
   "dependencies": {
     "axios": "^0.21.4",
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.6.1",
     "chart.js": "2.7.2",
     "classnames": "^2.2.6",
     "d3-geo": "^1.11.3",
@@ -34,6 +34,7 @@
     "react-router-dom": "^5.1.2",
     "react-simple-maps": "^0.12.1",
     "react-sizeme": "^2.5.2",
+    "react-table": "^7.7.0",
     "reactstrap": "^7.1.0",
     "victory": "^32.0.0"
   },
