--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "react-ga": "^2.5.7",
     "react-icons": "^3.11.0",
     "react-infinite-calendar": "^2.3.1",
+    "react-moment": "^1.1.1",
     "react-notification-system": "^0.2.17",
     "react-router": "^4.3.1",
     "react-router-dom": "^5.1.2",
